Fri Jan 04 04:41:17 GMT 2013  Olly Betts <olly@survex.com>

	* common/safesyssocket.h: On Linux at least, sometimes SOCK_CLOEXEC is
	  defined but the kernel doesn't handle it in socketpair(), so add a
	  wrapper which will retry without SOCK_CLOEXEC in this case.  Noticed
	  on Ubuntu precise.

Sat Dec 29 17:53:30 GMT 2012  Olly Betts <olly@survex.com>

	* docs/quickstart.rst: Fix seriously outdated statement that Xapian
	  doesn't create the database directory - that changed in 0.7.2
	  (release 2003-07-11), pointed out by aarsh on #xapian.

Thu Dec 27 06:06:30 GMT 2012  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Adjust handling of Unicode
	  opening/closing double quotes - if a quoted boolean term was started
	  with ASCII double quote, then only ASCII double quote can end it, as
	  otherwise it's impossible to quote a term containing Unicode double
	  quotes.
	* tests/queryparsertest.cc: Update testcases.

Sun Dec 23 18:16:52 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Fix typo in previous commit.

Sun Dec 23 18:06:45 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Use the new flock()-based flint-compatible locking
	  under DJGPP, and remove special cases to disable chert and brass
	  under DJGPP (untested, as I no longer have a DJGPP setup or
	  cross-compiler).

Sun Dec 23 17:51:36 GMT 2012  Olly Betts <olly@survex.com>

	* backends/flint_lock.cc,backends/flint_lock.h: Add flock() based
	  locking implementation, which is much simpler than using fcntl() due
	  to saner semantics around releasing locks when closing other
	  descriptors on the same file (at least on platforms where flock()
	  isn't just a compatibility wrapper around fcntl()).  We can't simply
	  switch to this without breaking locking compatibility with previous
	  releases, though it might be useful for porting to platforms without
	  fcntl() locking.  Also, flock() apparently doesn't work over NFS -